--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "http://akshaykurhekar.github.io/AkshayKurhekar",
+  "homepage": "http://akshaykurhekar.github.io/AkshayKurhekarPortfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
